nc-platform-ui/k8s/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nc-platform-ui-ingress
  annotations:
    kubernetes.io/tls-acme: "false"
spec:
  rules:
    - host: neuro-cloud-sindenis.cloud.okteto.net
      http:
        paths:
          - path: /
            backend:
              serviceName: nc-platform-ui-service
              servicePort: 3000
